--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,57 @@
 
+@InBook{	  safir1991evaluative,
+  address	= {Cambridge, Mass.},
+  author	= {Safir, Ken},
+  booktitle	= {Principles and parameters in comparative grammar},
+  editor	= {Freidin, Robert},
+  pages		= {99-131},
+  publisher	= {MIT Press},
+  title		= {Evaluative predicates and the representation of implicit
+		  arguments},
+  year		= {1991}
+}
+
+@Book{		  freidin1991principles,
+  address	= {Cambridge, Mass.},
+  editor	= {Freidin, Robert},
+  pages		= {xii, 463},
+  publisher	= {MIT Press},
+  title		= {Principles and parameters in comparative grammar},
+  volume	= {20},
+  year		= {1991}
+}
+
+@Article{	  mendezparedes2014norma,
+  author	= {M{\'e}ndez Garc{\'i}a de Paredes, Elena},
+  journal	= {Romanistisches Jahrbuch},
+  number	= {1},
+  title		= {Tensiones entre normatividad ling{\"u}{\'i}stica y
+		  descripci{\'o}n gramatical en la reciente producci{\'o}n
+		  gramatical de la Real Academia Espa{\~n}ola},
+  volume	= {64},
+  year		= {2014}
+}
+
+@Article{	  yang2022onemodel,
+  author	= {Yang, Yuan and Piantadosi, Steven T.},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {5},
+  pages		= {e2021865119},
+  title		= {One model for the learning of language},
+  volume	= {119},
+  year		= {2022}
+}
+
+@Article{	  silk2021evaluational,
+  author	= {Silk, Alex},
+  journal	= {Philosophy and Phenomenological Research},
+  number	= {1},
+  pages		= {127--161},
+  title		= {Evaluational adjectives},
+  volume	= {102},
+  year		= {2021}
+}
+
 @Book{		  gelderen2021third,
   author	= {van Gelderen, Elly},
   pages		= {220},
