--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@Article{	  demonte1987predication,
+  author	= {Demonte, Violeta},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {147--157},
+  title		= {C-Command, Prepositions, and Predication},
+  volume	= {18},
+  year		= {1987}
+}
+
+@Book{		  hale2002prolegomenon,
+  address	= {Cambridge, Mass.},
+  author	= {Hale, Kenneth L. and Keyser, Samuel Jay},
+  pages		= {281},
+  publisher	= {MIT Press},
+  title		= {Prolegomenon to a theory of argument structure},
+  volume	= {39},
+  year		= {2002}
+}
+
+@Article{	  larson1988double,
+  author	= {Larson, Richard K.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {335--391},
+  title		= {On the Double Object Construction},
+  volume	= {19},
+  year		= {1988}
+}
+
+@Article{	  roeper1987implicit,
+  author	= {Roeper, Thomas},
+  journal	= {Linguistic Inquiry},
+  number	= {Spring, 1987},
+  pages		= {267--310},
+  title		= {Implicit Arguments and the Head-Complement Relation},
+  volume	= {18, No. 2}
+}
+
 @InBook{	  safir1991evaluative,
   address	= {Cambridge, Mass.},
   author	= {Safir, Ken},
