--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,382 @@
 
+@PhDThesis{	  przepiorkowski1999,
+  address	= {T{\"u}bingen},
+  author	= {Przepi{\'o}rkowski, Adam},
+  school	= {Universit{\"a}t T{\"u}bingen},
+  title		= {Case assignment and the complement-adjunct dichotomy: A
+		  non-configurational constraint-based approach},
+  year		= {1999}
+}
+
+@InBook{	  patejuk2018,
+  address	= {Stanford, CA},
+  author	= {Patejuk, Agnieszka and Przepi{\'o}rkowski, Adam},
+  booktitle	= {Proceedings of the LFG'18 Conference, University of
+		  Vienna},
+  editor	= {Butt, Miriam and King, Tracy Holloway},
+  pages		= {285-305},
+  publisher	= {CSLI Publications},
+  title		= {Predicative Constructions with Infinitival and Clausal
+		  Subjects in Polish},
+  year		= {2018}
+}
+
+@InBook{	  grimmmcnally2015,
+  author	= {Grimm, Scott and McNally, Louise},
+  booktitle	= {Semantics and Linguistic Theory (SALT) 25},
+  editor	= {D'Antonio, Sarah and Moroney, Mary and Little,
+		  Carol-Rose},
+  pages		= {82-102},
+  publisher	= {LSA and CLC Publications},
+  title		= {The -ing dynasty: Rebuilding the semantics of
+		  nominalizations Semantics and Linguistic Theory (SALT) 25},
+  year		= {2015}
+}
+
+@InBook{	  gehrke2019,
+  author	= {Gehrke, Berit},
+  booktitle	= {The Oxford Handbook of Event Structure},
+  editor	= {Truswell, Robert},
+  pages		= {204-233},
+  publisher	= {Oxford University Press},
+  title		= {Event Kinds},
+  year		= {2019}
+}
+
+@Article{	  bondaruk2007,
+  author	= {Bondaruk, Anna and Szymanek, Bogdam},
+  journal	= {Studies in Pollish Linguistics},
+  pages		= {61--97},
+  title		= {Polish nominativeless constructions with dative
+		  Experiencers: form, meaning and structure},
+  volume	= {4},
+  year		= {2007}
+}
+
+@Article{	  arregi2021,
+  author	= {Arregi, Karlos and Pietraszko, Asia},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {241--290},
+  title		= {The Ups and Downs of Head Displacement},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  davis2021,
+  author	= {Davis, Colin P.},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {291--332},
+  title		= {Possessor Extraction in Colloquial English: Evidence for
+		  Successive Cyclicity and Cyclic Linearization},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  baggio2021,
+  author	= {Baggio, Pietro},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {393--407},
+  title		= {Introducing Arguments and Modifiers in the Noun Phrase},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  fujiwara2021,
+  author	= {Fujiwara, Yoshiki},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {627--639},
+  title		= {Wh-Scope Marking in Japanese: Evidence for the
+		  Indirect-Dependency Approach},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  molczanow2021,
+  author	= {Mo{\l}czanow, Janina and {\L}ukaszewicz, Beata},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {551--577},
+  title		= {Metrical Structure and Licensing: An Argument from
+		  Ukrainian},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  aravind2021,
+  author	= {Aravind, Athulya},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {377--392},
+  title		= {Successive Cyclicity in DPs: Evidence from Mongolian
+		  Nominalized Clauses},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  medeiros2021,
+  author	= {Medeiros, David J. and Mains, Paul and McGowan, Kevin B.},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {426--440},
+  title		= {Ceiling Effects on Weight in Heavy NP Shift},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  sigurdsson2021,
+  author	= {Sigurðsson, Einar Freyr and Wood, Jim},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {579--626},
+  title		= {On the Implicit Argument of Icelandic Indirect
+		  Causatives},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  erlewine2021,
+  author	= {Erlewine, Michael Yoshitaka and Levin, Theodore},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {408--425},
+  title		= {Philippine Clitic Pronouns and the Lower Phase Edge},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  iatridou2021,
+  author	= {Iatridou, Sabine},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {519--550},
+  title		= {Negation-Licensed Commands},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  tollan2021,
+  author	= {Tollan, Rebecca},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {640--654},
+  title		= {The Role of the Absolutive Object in Morphological
+		  Accessibility},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  jardine2021,
+  author	= {Jardine, Adam and Danis, Nick and Iacoponi, Luca},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {333--358},
+  title		= {A Formal Investigation of Q-Theory in Comparison to
+		  Autosegmental Representations},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  alqarni2021,
+  author	= {Alqarni, Muteb},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {441--472},
+  title		= {No Gender Polarity in Arabic Numeral Phrases},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  foley2022,
+  author	= {Foley, Steven and Toosarvandani, Maziar},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--40},
+  title		= {Extending the Person-Case Constraint to Gender: Agreement,
+		  Locality, and the Syntax of Pronouns},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  hankamer2021,
+  author	= {Hankamer, Jorge and Mikkelsen, Line},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {473--518},
+  title		= {CP Complements to D},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  neeleman2022,
+  author	= {Neeleman, Ad and Koot, Hans van de},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {182--198},
+  title		= {PP-Extraposition and Precedence},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  erteschik-shir2021,
+  author	= {Erteschik-Shir, Nomi and Josefsson, Gunl{\"o}g and
+		  K{\"o}hnlein, Bj{\"o}rn},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {711--746},
+  title		= {Variation in Mainland Scandinavian Object Shift: A
+		  Prosodic Analysis},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  hu2022,
+  author	= {Hu, Xuhui},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {41--85},
+  title		= {Same Root, Different Categories: Encoding Direction in
+		  Chinese},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  coon2021,
+  author	= {Coon, Jessica and Keine, Stefan},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {655--710},
+  title		= {Feature Gluttony},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  buring2021,
+  author	= {B{\"u}ring, Daniel and Truckenbrodt, Hubert},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {791--811},
+  title		= {Correspondence between XPs and Phonological Phrases},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  pan2022,
+  author	= {Pan, Victor Junnan},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {121--154},
+  title		= {Deriving Head-Final Order in the Peripheral Domain of
+		  Chinese},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  kim2022,
+  author	= {Kim, Min-Joo},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {168--181},
+  title		= {That's a Curious Copular Construction You Have There},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  patejuk2020,
+  author	= {Patejuk, Agnieszka and Przepi{\'o}rkowski, Adam},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--17},
+  title		= {Predicative Adverbs: Evidence from Polish},
+  year		= {2020}
+}
+
+@Article{	  scott2021,
+  author	= {Scott, Tessa},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {812--833},
+  title		= {Two Types of Resumptive Pronouns in Swahili},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  sereikaite2021,
+  author	= {{\v S}ereikait{\.e}, Milena},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {747--789},
+  title		= {Active Existential in Lithuanian: Remarks on Burzio's
+		  Generalization},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  dawson2022,
+  author	= {Dawson, Virginia},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {155--167},
+  title		= {Outscoping the Directive Force of Imperatives},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  sato2021a,
+  author	= {Sato, Yosuke and Maeda, Masako},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {359--376},
+  title		= {Syntactic Head Movement in Japanese: Evidence from
+		  Verb-Echo Answers and Negative Scope Reversal},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  saab2021,
+  author	= {Saab, Andr{\'e}s and Zdrojewski, Pablo},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {852--866},
+  title		= {On the Nonexistence of Asymmetric DOM in Spanish},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  vicente2021,
+  author	= {Vicente, Luis and Barros, Matthew and Messick, Troy and
+		  Saab, Andr{\'e}s},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {867--880},
+  title		= {On a Nonargument for Cleft Sources in Sluicing},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  morita2022,
+  author	= {Morita, Takashi and O'Donnell, Timothy J.},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {87--120},
+  title		= {Statistical Evidence for Learnable Lexical Subclasses in
+		  Japanese},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  reiss2022,
+  author	= {Reiss, Charles},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {199--209},
+  title		= {Priority Union and Feature Logic in Phonology},
+  volume	= {53},
+  year		= {2022}
+}
+
 @Article{	  demonte1987predication,
   author	= {Demonte, Violeta},
   journal	= {Linguistic Inquiry},
