--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@InBook{	  dowty1989thematic,
+  address	= {Dordrecht},
+  author	= {Dowty, David R.},
+  booktitle	= {Properties, Types and Meaning II},
+  editor	= {Chierchia, Gennaro and Partee, Barbara H. and Turner,
+		  Raymond},
+  pages		= {69-129},
+  publisher	= {Springer Netherlands},
+  title		= {On the Semantic Content of the Notion of `Thematic Role'},
+  year		= {1989}
+}
+
 @PhDThesis{	  przepiorkowski1999,
   address	= {T{\"u}bingen},
   author	= {Przepi{\'o}rkowski, Adam},
