--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,190 @@
 
+@Book{		  escandellvidal2020comunicacion,
+  address	= {Madrid},
+  author	= {Escandell-Vidal, Mar{\'i}a Victoria},
+  pages		= {160},
+  publisher	= {Ediciones AKAL},
+  title		= {La Comunicaci{\'o}n: Lengua, Cognici{\'o}n y Sociedad},
+  year		= {2020}
+}
+
+@Book{		  escandellvidal201160,
+  address	= {Madrid},
+  editor	= {Escandell-Vidal, Mar{\'i}a Victoria and Leonetti, Manuel
+		  and S{\'a}nchez L{\'o}pez, Cristina},
+  pages		= {432},
+  publisher	= {Ediciones AKAL},
+  title		= {60 problemas de gram{\'a}tica},
+  year		= {2011}
+}
+
+@PhDThesis{	  paz2013sujetos,
+  address	= {Arizona, Texas},
+  author	= {Paz, Justin},
+  school	= {University of Arizona},
+  title		= {La Distribuci{\'o}n e Interpretaci{\'o}n de los Sujetos
+		  L{\'e}xicos de Infinitivo en Espa{\~n}ol: Un Caso
+		  Problem{\'a}tico Para la Teor{\'i}a del Caso},
+  year		= {2013}
+}
+
+@Book{		  harbour2016impossible,
+  author	= {Harbour, Daniel},
+  pages		= {312},
+  publisher	= {Linguistic Inquiry Monographs},
+  title		= {Impossible Persons},
+  year		= {2016}
+}
+
+@InBook{	  benito2021internet,
+  author	= {Benito Moreno, Carlota de},
+  booktitle	= {English and Spanish: World Languages in Interaction},
+  editor	= {Perez, Danae and Hundt, Marianne and Kabatek, Johannes and
+		  Schreier, Daniel},
+  pages		= {258-286},
+  publisher	= {Cambridge University Press},
+  title		= {`The Spanish of the Internet': Is That a Thing?:
+		  Discursive and Morphosyntactic Innovations in Computer
+		  Mediated Communication},
+  year		= {2021}
+}
+
+@InBook{	  piera1987infinitivo,
+  address	= {Madrid},
+  author	= {Piera, Carlos},
+  booktitle	= {Sintaxis de las lenguas rom{\'a}nicas},
+  editor	= {Demonte, Violeta and Fern{\'a}ndez Lagunilla, Marina},
+  pages		= {148-166},
+  publisher	= {Ediciones El Arquero},
+  title		= {Sobre la estructura de las cl{\'a}usulas de infinitivo},
+  year		= {1987}
+}
+
+@InBook{	  alonsocortes2011ojala,
+  address	= {Madrid},
+  author	= {Alonso-Cort{\'e}s, {\'A}ngel},
+  booktitle	= {60 problemas de gram{\'a}tica},
+  editor	= {Escandell-Vidal, Mar{\'i}a Victoria and Leonetti, Manuel
+		  and S{\'a}nchez L{\'o}pez, Cristina},
+  pages		= {24-30},
+  publisher	= {Akal Universitaria},
+  title		= {\textit{Ojal{\'a} que llueva caf{\'e}}: una
+		  construcci{\'o}n optativa del espa{\~n}ol},
+  year		= {2011}
+}
+
+@InBook{	  haegeman2003discourse,
+  address	= {Oxford},
+  author	= {Haegeman, Liliane M. V. and Hill, Virginia},
+  booktitle	= {Syntax and its limits},
+  editor	= {Folli, Raffaella and Sevdali, Christina and Truswell,
+		  Robert},
+  pages		= {370-390},
+  publisher	= {Oxford University Press},
+  title		= {The syntacticization of discourse},
+  year		= {2013}
+}
+
+@InBook{	  hernanz1999infinitivo,
+  address	= {Madrid},
+  author	= {Hernanz, Maria Llu{\"\i}sa},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {2197-2356},
+  publisher	= {RAE Espasa},
+  title		= {El infinitivo},
+  year		= {1999}
+}
+
+@InBook{	  hernanz2011periferia,
+  address	= {Madrid},
+  author	= {Hernanz, Maria Llu{\"\i}sa},
+  booktitle	= {60 problemas de gram{\'a}tica},
+  editor	= {Escandell-Vidal, M. Victoria and Leonetti, Manuel and
+		  S{\'a}nchez L{\'o}pez, Cristina},
+  pages		= {263-270},
+  publisher	= {Akal Universitaria},
+  title		= {Sobre la periferia de los infinitivos},
+  year		= {2011}
+}
+
+@InBook{	  etxepare2002root,
+  address	= {Amsterdam},
+  author	= {Etxepare, Ricardo and Grohmann, Kleanthes K.},
+  booktitle	= {Current Issues in Romance Languages: Current Issues in
+		  Linguistic Theory},
+  editor	= {Cresti, D. and Satterfield, T. and Tortorra, C.},
+  pages		= {65-79},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Towards a syntax of adult Root Infinitives},
+  year		= {2002}
+}
+
+@Article{	  grohmann2003root,
+  author	= {Grohmann, Kleanthes K. and Etxepare, Ricardo},
+  journal	= {Probus},
+  number	= {2},
+  title		= {Root infinitives: A comparative view},
+  volume	= {15},
+  year		= {2003}
+}
+
+@InBook{	  stockwell2020,
+  address	= {Amherst, Mass.},
+  author	= {Stockwell, Richard and Wong, Deborah},
+  booktitle	= {Proceedings of NELS 50},
+  editor	= {Asatryan, Mariam and Song, Yixiao and Whitmal, Ayana},
+  pages		= {169-183},
+  publisher	= {GLSA},
+  title		= {Sprouting and the structure of except-phrases},
+  year		= {2020}
+}
+
+@PhDThesis{	  vostrikova2019,
+  address	= {Ahmerst},
+  author	= {Vostrikova, Ekaterina},
+  school	= {University of Massachusetts},
+  title		= {Phrasal and clausal exceptive-additive constructions
+		  crosslinguistically},
+  year		= {2019}
+}
+
+@Unpublished{	  postdam2019,
+  author	= {Postdam, Eric and Polinsky, Maria},
+  title		= {Clausal and phrasal exceptives},
+  year		= {2019}
+}
+
+@InBook{	  soltan2016,
+  author	= {Soltan, Usama},
+  booktitle	= {Perspectives on Arabic Linguistics XXVII},
+  pages		= {35-57},
+  publisher	= {John Benjamins Publishing},
+  title		= {On the syntax of exceptive constructions in Egyptian
+		  Arabic},
+  year		= {2016}
+}
+
+@InBook{	  schaffer2011perspesctive,
+  address	= {New York},
+  author	= {Schaffer, Jonathan},
+  booktitle	= {Epistemic Modality},
+  editor	= {Egan, Andy and Weatherson, Brian},
+  pages		= {179-226},
+  publisher	= {OUP Oxford},
+  title		= {Perspective in Taste Predicates and Epistemic Modals},
+  year		= {2011}
+}
+
+@Book{		  egan2011epistemic,
+  address	= {New York},
+  editor	= {Egan, Andy and Weatherson, Brian},
+  pages		= {352},
+  publisher	= {OUP Oxford},
+  title		= {Epistemic Modality},
+  year		= {2011}
+}
+
 @InBook{	  dowty1989thematic,
   address	= {Dordrecht},
   author	= {Dowty, David R.},
