--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  silvagni2021kimian,
+  author	= {Silvagni, Federico},
+  journal	= {Lingua},
+  pages		= {102925},
+  title		= {Kimian/Davidsonian, Individual/Stage and non-verbal
+		  predication: A Romance perspective},
+  volume	= {250},
+  year		= {2021}
+}
+
+@Book{		  larson2014shell,
+  address	= {London},
+  author	= {Larson, Richard K.},
+  pages		= {504},
+  publisher	= {Routledge},
+  title		= {On Shell Structure},
+  year		= {2014}
+}
+
 @Book{		  escandellvidal2020comunicacion,
   address	= {Madrid},
   author	= {Escandell-Vidal, Mar{\'i}a Victoria},
