--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  colley2022ellipsis,
+  author	= {Colley, Justin and Bassi, Itai},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {1--41},
+  title		= {A prosodic theory of possible ellipsis remnants},
+  volume	= {7},
+  year		= {2022}
+}
+
 @Article{	  silvagni2021kimian,
   author	= {Silvagni, Federico},
   journal	= {Lingua},
