--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  chierchia1990meaning,
+  address	= {Cambridge, Mass.},
+  author	= {Chierchia, Gennaro and McConnell-Ginet, Sally},
+  publisher	= {MIT Press},
+  title		= {Meaning and grammar: An introduction to semantcs},
+  year		= {1990}
+}
+
 @Article{	  colley2022ellipsis,
   author	= {Colley, Justin and Bassi, Itai},
   journal	= {Glossa: a journal of general linguistics},
