--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  smiley1958entailment,
+  author	= {Smiley, T. J.},
+  journal	= {Proceedings of the Aristotelian Society},
+  number	= {1958 - 1959},
+  pages		= {233--254},
+  title		= {Entailment and Deducibility},
+  volume	= {New Series, 59},
+  year		= {1958}
+}
+
 @Book{		  chierchia1990meaning,
   address	= {Cambridge, Mass.},
   author	= {Chierchia, Gennaro and McConnell-Ginet, Sally},
