--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@InCollection{	  demonte2015parametros,
+  address	= {Madrid},
+  author	= {Demonte, Violeta},
+  booktitle	= {Perspectivas de sintaxis formal},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {391-429},
+  publisher	= {Akal},
+  title		= {Par{\'a}metros y variaci{\'o}n en la interfaz
+		  l{\'e}xico-sintaxis},
+  year		= {2015}
+}
+
+@InCollection{	  baker2008conjecture,
+  address	= {Amsterdam; Philadelphia},
+  author	= {Baker, Mark C.},
+  booktitle	= {The limits of syntactic variation},
+  editor	= {Biberauer, Theresa},
+  pages		= {351-374},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The macroparameter in a microparametric world},
+  year		= {2008}
+}
+
+@Article{	  conrod2022gender,
+  author	= {Conrod, Kirby},
+  journal	= {Canadian Journal of Linguistics/Revue canadienne de
+		  linguistique},
+  title		= {Abolishing gender on D},
+  year		= {2022}
+}
+
 @Article{	  smiley1958entailment,
   author	= {Smiley, T. J.},
   journal	= {Proceedings of the Aristotelian Society},
