--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Book{		  bucking2021tropes,
+  address	= {London},
+  author	= {B{\"u}cking, Sebastian and Scheifele, Edith},
+  publisher	= {UCL, QMUL},
+  title		= {On tropes, states and the combinatorics of the copula
+		  werden in german},
+  volume	= {25},
+  year		= {2021}
+}
+
 @InCollection{	  demonte2015parametros,
   address	= {Madrid},
   author	= {Demonte, Violeta},
