--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -2,6 +2,8 @@
 @Book{		  bucking2021tropes,
   address	= {London},
   author	= {B{\"u}cking, Sebastian and Scheifele, Edith},
+  editor	= {Grosz, Patrick G., and Mart{\'i}, Luisa and Pearson, Hazel
+		  A., and Sudo, Yasutada, and Zobel, Sara},
   publisher	= {UCL, QMUL},
   title		= {On tropes, states and the combinatorics of the copula
 		  werden in german},
