--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,5 +1,5 @@
 
-@Book{		  bucking2021tropes,
+@InBook{	  bucking2021tropes,
   address	= {London},
   author	= {B{\"u}cking, Sebastian and Scheifele, Edith},
   editor	= {Grosz, Patrick G., and Mart{\'i}, Luisa and Pearson, Hazel
