--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -2,12 +2,12 @@
 @InBook{	  bucking2021tropes,
   address	= {London},
   author	= {B{\"u}cking, Sebastian and Scheifele, Edith},
+  booktitle	= {Proceedings of Sinn und Bedeutung 25},
   editor	= {Grosz, Patrick G., and Mart{\'i}, Luisa and Pearson, Hazel
 		  A., and Sudo, Yasutada, and Zobel, Sara},
   publisher	= {UCL, QMUL},
   title		= {On tropes, states and the combinatorics of the copula
 		  werden in german},
-  volume	= {25},
   year		= {2021}
 }
 
