--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@InCollection{	  altshulerschloder2021,
+  author	= {Altshuler, Daniel and Schl{\"o}der, Julian},
+  booktitle	= {Proceedings of Sinn und Bedeutung 25},
+  editor	= {Grosz, Patrick and Mart{\'i}, Luisa and Pearson, Hazel A.
+		  and Sudo, Yasutada and Zobel, Sara},
+  title		= {If pictures are stative, what does this mean for discourse
+		  interpretation?},
+  year		= {2021}
+}
+
 @InBook{	  bucking2021tropes,
   address	= {London},
   author	= {B{\"u}cking, Sebastian and Scheifele, Edith},
