--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Article{	  howell2022alternative,
+  author	= {Howell, Anna and Hohaus, Vera and Berezovskaya, Polina and
+		  Sachs, Konstantin and Braun, Julia and Durmaz, {\c
+		  S}ehriban and Beck, Sigrid},
+  journal	= {Linguistic Variation},
+  number	= {1},
+  pages		= {1--77},
+  title		= {(No) variation in the grammar of alternatives},
+  volume	= {22},
+  year		= {2022}
+}
+
+@Article{	  bowler2021gradability,
+  author	= {Bowler, Margit and Gluckman, John},
+  journal	= {Linguistic Variation},
+  number	= {2},
+  pages		= {281--321},
+  title		= {Gradability across grammatical domains},
+  volume	= {21},
+  year		= {2021}
+}
+
 @InCollection{	  altshulerschloder2021,
   author	= {Altshuler, Daniel and Schl{\"o}der, Julian},
   booktitle	= {Proceedings of Sinn und Bedeutung 25},
@@ -66,7 +88,7 @@
   address	= {Cambridge, Mass.},
   author	= {Chierchia, Gennaro and McConnell-Ginet, Sally},
   publisher	= {MIT Press},
-  title		= {Meaning and grammar: An introduction to semantcs},
+  title		= {Meaning and grammar: An introduction to semantics},
   year		= {1990}
 }
 
