--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  borsley1997relative,
+  author	= {Borsley, Robert D.},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {629--647},
+  title		= {Relative Clauses and the Theory of Phrase Structure},
+  volume	= {28},
+  year		= {1997}
+}
+
+@Book{		  kayne2000parameters,
+  address	= {Oxford},
+  author	= {Kayne, Richard S.},
+  pages		= {369},
+  publisher	= {Oxford University Press},
+  title		= {Parameters and Universals},
+  year		= {2000}
+}
+
 @Article{	  howell2022alternative,
   author	= {Howell, Anna and Hohaus, Vera and Berezovskaya, Polina and
 		  Sachs, Konstantin and Braun, Julia and Durmaz, {\c
