--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@PhDThesis{	  brito1988relativas,
+  address	= {Porto},
+  author	= {Brito, Ana Maria},
+  school	= {Universidade do Porto},
+  title		= {A sintaxe das ora{\c c}{\~o}es relativas em portugu{\^e}s},
+  year		= {1988}
+}
+
 @Article{	  borsley1997relative,
   author	= {Borsley, Robert D.},
   journal	= {Linguistic Inquiry},
