--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Book{		  neveu2019phrase,
+  address	= {London},
+  editor	= {Neveu, Franck},
+  publisher	= {ISTE Editions},
+  title		= {Proposition, phrase, {\'e}nonc{\'e}},
+  year		= {2019}
+}
+
+@InBook{	  abeille2022corpus,
+  address	= {London},
+  author	= {Abeill{\'e}, Anne and Crabb{\'e}, Benoit and Thuilier,
+		  Juliette},
+  booktitle	= {Les usages de l'usage},
+  editor	= {Godart-Wending, Be{\'a}trice and Laugier, Sandra},
+  pages		= {239-264},
+  publisher	= {ISTE Editions},
+  title		= {La notion d'usage en linguistique: du corpus {\`a}
+		  l'experimental},
+  year		= {2022}
+}
+
+@Book{		  godart2022usage,
+  address	= {London},
+  editor	= {Godart-Wending, Be{\'a}trice and Laugier, Sandra},
+  publisher	= {ISTE Editions},
+  title		= {Les usages de l'usage},
+  year		= {2022}
+}
+
 @PhDThesis{	  brito1988relativas,
   address	= {Porto},
   author	= {Brito, Ana Maria},
