--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@PhDThesis{	  stateva2002superlative,
+  address	= {Stors},
+  author	= {Stateva, Penka},
+  school	= {University of Connecticut},
+  title		= {How Different are Different Degree Constructions},
+  year		= {2002}
+}
+
+@Article{	  escandell-vidal2020inclusivo,
+  author	= {Escandell-Vidal, Mar{\'i}a Victoria},
+  journal	= {IgualdaES},
+  title		= {En torno al g{\'e}nero inclusivo},
+  volume	= {2},
+  year		= {2020}
+}
+
 @Book{		  neveu2019phrase,
   address	= {London},
   editor	= {Neveu, Franck},
