--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Article{	  stockwell2022contrast,
+  author	= {Stockwell, Richard},
+  journal	= {Natural Language Semantics},
+  title		= {Contrast and verb phrase ellipsis: The case of tautologous
+		  conditionals},
+  year		= {2022}
+}
+
+@Article{	  beltrama2022perfect,
+  author	= {Beltrama, Andrea},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {321--364},
+  title		= {Just perfect, simply the best: an analysis of emphatic
+		  exclusion},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  blumel2021npdp,
+  author	= {Bl{\"u}mel, Andreas and Holler, Anke},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {DP, NP, or neither? Contours of an unresolved debate},
+  year		= {2021}
+}
+
 @PhDThesis{	  stateva2002superlative,
   address	= {Stors},
   author	= {Stateva, Penka},
