--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,113 @@
 
+@InBook{	  bennis2000,
+  author	= {Bennis, Hans},
+  booktitle	= {Lexical Specification and Insertion},
+  editor	= {Coopmans, Peter and Everaert, Martin and Grimshaw, Jane
+		  Barbara},
+  pages		= {27-69},
+  publisher	= {John Benjamins Publishing},
+  title		= {Adjectives and argument structure},
+  year		= {2000}
+}
+
+@Book{		  coopmans2000,
+  editor	= {Coopmans, Peter and Everaert, Martin and Grimshaw, Jane
+		  Barbara},
+  pages		= {467},
+  publisher	= {John Benjamins Publishing},
+  title		= {Lexical Specification and Insertion},
+  year		= {2000}
+}
+
+@InBook{	  bennis2004,
+  author	= {Bennis, Hans},
+  booktitle	= {The Unaccusativity Puzzle: Explorations of the
+		  Syntax-lexicon Interface},
+  editor	= {Alexiadou, Artemis and Anagnostopoulou, Elena and
+		  Everaert, Martin},
+  pages		= {84-114},
+  publisher	= {OUP Oxford},
+  title		= {Unergative adjectives and psych verbs},
+  year		= {2004}
+}
+
+@Book{		  alexiadou2004unaccusativity,
+  editor	= {Alexiadou, Artemis and Anagnostopoulou, Elena and
+		  Everaert, Martin},
+  pages		= {372},
+  publisher	= {OUP Oxford},
+  title		= {The Unaccusativity Puzzle: Explorations of the
+		  Syntax-lexicon Interface},
+  year		= {2004}
+}
+
+@Article{	  barker2022local,
+  author	= {Barker, Chris},
+  journal	= {Journal of Semantics},
+  title		= {Composing Local Contexts},
+  year		= {2022}
+}
+
+@InBook{	  mcginnis2017applicative,
+  address	= {Hoboken, NJ, USA},
+  author	= {McGinnis, Martha},
+  booktitle	= {Wiley Companion to Syntax},
+  editor	= {Evareart, Martin and van Riemsdijk, Henk},
+  pages		= {1-32},
+  publisher	= {John Wiley and Sons, Inc.},
+  title		= {Applicatives},
+  year		= {2017}
+}
+
+@InBook{	  rozwadowska2017psy,
+  author	= {Rozwadowska, Bo{\.z}ena},
+  booktitle	= {Wiley Companion to Syntax},
+  editor	= {Evareart, Martin and van Riemsdijk, Henk},
+  publisher	= {John Wiley and Sons},
+  title		= {Psychologcal Verbs and Psychological Adjectives},
+  year		= {2017}
+}
+
+@InBook{	  anderson2017affectedness,
+  address	= {Hoboken, NJ, USA},
+  author	= {Anderson, Mona},
+  booktitle	= {Wiley Blackwell Companion to Syntx},
+  editor	= {van Riemsdijk, Henk and Evareart, Martin},
+  pages		= {1-21},
+  publisher	= {John Wiley and Sons, Inc.},
+  title		= {Affectedness},
+  year		= {2017}
+}
+
+@InBook{	  lasnik2017conditionc,
+  address	= {Hoboken, NJ, USA},
+  author	= {Lasnik, Howard and Funakoshi, Kenshi},
+  booktitle	= {Wiley Blacwell Companion to Syntax},
+  editor	= {van Riemsdijk, Henk and Evareart, Martin},
+  pages		= {1-27},
+  publisher	= {John Wiley and Sons, Inc.},
+  title		= {Condition C Violations and Strong Crossover},
+  year		= {2017}
+}
+
+@InBook{	  lasnik2012structure,
+  author	= {Lasnik, Howard and Uriagereka, Juan},
+  booktitle	= {Of Grammar, Words, and Verses: In Honor of Carlos Piera},
+  editor	= {Torrego, Esther},
+  pages		= {5-18},
+  publisher	= {John Benjamins Publishing},
+  title		= {Structure at the bottom},
+  year		= {2012}
+}
+
+@Book{		  torrego2012verses,
+  editor	= {Torrego, Esther},
+  pages		= {272},
+  publisher	= {John Benjamins Publishing},
+  title		= {Of Grammar, Words, and Verses: In Honor of Carlos Piera},
+  year		= {2012}
+}
+
 @Article{	  stockwell2022contrast,
   author	= {Stockwell, Richard},
   journal	= {Natural Language Semantics},
