--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Book{		  gonzalezruiz2016,
+  editor	= {Gonz{\'a}lez Ruiz, Ram{\'o}n and Loureda Lamas, {\'O}scar
+		  and Izquierda Alegr{\'i}a, D{\'a}maso},
+  pages		= {356},
+  title		= {La evidencialidad en espa{\~n}ol: teor{\'i}a y
+		  descripci{\'o}n},
+  year		= {2016}
+}
+
+@Book{		  speranza2014,
+  author	= {Speranza, Adriana},
+  pages		= {197},
+  title		= {Evidencialidad en el espa{\~n}ol americano.: La
+		  expresi{\'o}n ling{\"u}{\'i}stica de la perspectiva del
+		  hablante.},
+  year		= {2014}
+}
+
+@Article{	  ramirezgelbes2013,
+  author	= {Ram{\'i}rez Gelbes, Silvia},
+  journal	= {RLA. Revista de ling{\"u}{\'i}stica te{\'o}rica y aplicada},
+  number	= {1},
+  pages		= {101--125},
+  title		= {Los predicados estativos y la evidencialidad: Un
+		  an{\'a}lisis desde la Teor{\'i}a de los Bloques
+		  Sem{\'a}nticos},
+  volume	= {51},
+  year		= {2013}
+}
+
 @InBook{	  bennis2000,
   author	= {Bennis, Hans},
   booktitle	= {Lexical Specification and Insertion},
