--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,188 @@
 
+@Article{	  geist2010,
+  author	= {Geist, Ljudmila},
+  journal	= {Russian Linguistics},
+  number	= {3},
+  pages		= {239--260},
+  title		= {The argument structure of predicate adjectives in
+		  Russian},
+  volume	= {34},
+  year		= {2010}
+}
+
+@Article{	  arche2012il,
+  author	= {Arche, Mar{\'i}a J.},
+  journal	= {Borealis: An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {109},
+  title		= {On the aspectuality of the Individual-Level Stage-Level
+		  dichotomy},
+  volume	= {1},
+  year		= {2012}
+}
+
+@Article{	  zhang2022have,
+  author	= {Zhang, Muye and Pi{\~n}ango, Mar{\'i}a Mercedes and Deo,
+		  Ashwini},
+  journal	= {Language},
+  number	= {1},
+  pages		= {123--156},
+  title		= {Word-meaning variation in English have-sentences: The
+		  impact of cognitive versus social factors on individuals›
+		  linguistic context-sensitivity},
+  volume	= {98},
+  year		= {2022}
+}
+
+@InBook{	  fabregas2022rasgos,
+  address	= {Madrid},
+  author	= {F{\'a}bregas, Antonio},
+  booktitle	= {Universales vern{\'a}culos en la gram{\'a}tica del
+		  espa{\~n}ol},
+  editor	= {Di Tullio, {\'A}ngela and Pato, Enrique},
+  pages		= {203-226},
+  publisher	= {Iberoamericana-Vervuert},
+  title		= {Rasgos nominales y construcciones presentacionales:
+		  persona y n{\'u}mero},
+  year		= {2022}
+}
+
+@InBook{	  resnik2022,
+  address	= {Madrid},
+  author	= {Resnik, Gabriela},
+  booktitle	= {Universales vern{\'a}culos en la gram{\'a}tica del
+		  espa{\~n}ol},
+  editor	= {Di Tullio, {\'A}ngela and Pato, Enrique},
+  pages		= {25-46},
+  publisher	= {Iberoamericana-Vervuert},
+  title		= {Intensificaci{\'o}n y recategorizaci{\'o}n},
+  year		= {2022}
+}
+
+@Book{		  tullio2022,
+  address	= {Madrid},
+  editor	= {Di Tullio, {\'A}ngela and Pato, Enrique},
+  pages		= {338},
+  publisher	= {Iberoamericana-Vervuert},
+  title		= {Universales vern{\'a}culos en la gram{\'a}tica del
+		  espa{\~n}ol},
+  year		= {2022}
+}
+
+@Article{	  fabregas2022gender,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {52},
+  pages		= {39--96},
+  title		= {Hacia una caracterizaci{\'o}n sint{\'a}ctica del
+		  g{\'e}nero del sustantivo en espa{\~n}ol},
+  volume	= {1},
+  year		= {2022}
+}
+
+@Article{	  arche2014adjectives,
+  author	= {Arche, Mar{\'i}a J. and F{\'a}bregas, Antonio and
+		  Mar{\'i}n, Rafael},
+  journal	= {Lingua},
+  pages		= {95--117},
+  title		= {Argument structure and aspect in adjectives and
+		  participles: Where are we},
+  volume	= {149},
+  year		= {2014}
+}
+
+@Article{	  hirvonen2019,
+  author	= {Hirvonen, Sanna and Karczewska, Natalia and Sikorski,
+		  Micha{\l} P.},
+  journal	= {Grazer Philosophische Studien},
+  number	= {4},
+  pages		= {541--568},
+  title		= {On Hybrid Expressivism about Aesthetic Judgments},
+  volume	= {96},
+  year		= {2019}
+}
+
+@Article{	  alfaraz2012,
+  author	= {Alfaraz, Gabriela G.},
+  journal	= {Studies in Hispanic and Lusophone Linguistics},
+  number	= {1},
+  title		= {The Status of the Extension of estar in Cuban Spanish},
+  volume	= {5},
+  year		= {2012}
+}
+
+@InBook{	  brown2012estar,
+  address	= {Sommerville, MA},
+  author	= {Brown, Esther L. and Cort{\'e}s-Torres, Mayra},
+  booktitle	= {Selected Proceedings of the 14th Hispanic Linguistics
+		  Symposium},
+  editor	= {Geeslin, Kimberly L. and D{\'i}az-Campos, Manuel},
+  publisher	= {Cascadilla Press},
+  title		= {Syntactic and Pragmatic Usage of the [estar + Adjective]
+		  Construction in Puerto Rican Spanish: {!'}Est{\'a} brutal},
+  year		= {2012}
+}
+
+@PhDThesis{	  markina2013,
+  address	= {Paris},
+  author	= {Garc{\'i}a-M{\'a}rkina, Y.},
+  school	= {l'Universit{\'e} Sorbonne Nouvelle -- Paris 3},
+  title		= {Recherches sur l'opposition entre ser et estar en
+		  espagnol. Historique de la question, et application a
+		  l'etude des variations dans leurs emplois en espagnol
+		  spontane contemporain au Mexique},
+  year		= {2013}
+}
+
+@Article{	  malaver2012,
+  author	= {Malaver, Irania},
+  journal	= {Lexis},
+  number	= {2},
+  pages		= {191--224},
+  title		= {Estamos muy grandes ya. Adjetivos de edad con ser y estar
+		  en el espa{\~n}ol de M{\'e}xico y de Guatemala},
+  volume	= {XXXVI},
+  year		= {2012}
+}
+
+@Article{	  cortes-torres2004,
+  author	= {Cort{\'e}s-Torres, Mayra},
+  journal	= {Hispania},
+  number	= {4},
+  pages		= {788},
+  title		= {¿Ser o estar? La variaci{\'o}n ling{\"u}{\'i}stica y
+		  social de estar m{\'a}s adjetivo en el espa{\~n}ol de
+		  Cuernavaca, M{\'e}xico},
+  volume	= {87},
+  year		= {2004}
+}
+
+@InBook{	  company2006descrip,
+  address	= {Madrid},
+  author	= {Company Company, Concepci{\'o}n},
+  booktitle	= {Actas del VI Congreso Internacional de Historia de la
+		  lengua espa{\~n}ola},
+  editor	= {Gir{\'o}n-Alconchel, Jos{\'e} Luis and Bustos-Tovar,
+		  Jes{\'u}s},
+  publisher	= {Arco Libros},
+  title		= {Aportaciones te{\'o}ricas y descriptivas de la sintaxis
+		  hist{\'o}rica del espa{\~n}ol americano a la sintaxis
+		  hist{\'o}rica del espa{\~n}ol general},
+  year		= {2006}
+}
+
+@Article{	  riviere1983modal,
+  author	= {Riviere, Claude},
+  journal	= {Lingua},
+  number	= {1},
+  pages		= {1--45},
+  title		= {Modal adjectives: Transformations, synonymy, and
+		  complementation},
+  volume	= {59},
+  year		= {1983}
+}
+
 @Book{		  gonzalezruiz2016,
   editor	= {Gonz{\'a}lez Ruiz, Ram{\'o}n and Loureda Lamas, {\'O}scar
 		  and Izquierda Alegr{\'i}a, D{\'a}maso},
